# WikiChunk

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
wikichunk/: __init__.py  chunkers.py  cleaner.py  cli.py  models.py  pipeline.py  reader.py
