[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wikichunk"
version = "0.1.0"
description = "ZIM and Wikipedia article chunker for RAG pipelines"
requires-python = ">=3.10"
dependencies = [
    "libzim>=3.0",
    "beautifulsoup4>=4.12",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
wikichunk = "wikichunk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wikichunk*"]
